--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
           </div> 
           <div class="offcanvas-body" style="background-color: var(--red);"> 
             <div class="nav-item">
-                <a class="nav-link active text-center text-white text-decoration-underline fs-3" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-center text-white text-decoration-underline fs-3" aria-current="page" href="#containerImg">Home</a>
               </div>
               <br>
               <div class="nav-item">
-                <a class="nav-link text-center text-white fs-3" href="#">Products</a>
+                <a class="nav-link text-center text-white fs-3" href="#containerTwo">Products</a>
               </div>
               <br>
               <div class="nav-item">
-                <a class="nav-link text-center text-white fs-3" href="#">Reviews</a>
+                <a class="nav-link text-center text-white fs-3" href="#myCarousel">Reviews</a>
               </div>
               <br>
               <div class="nav-item">
-                <a class="nav-link text-center text-white fs-3" href="#">Contact</a>
+                <a class="nav-link text-center text-white fs-3" href="#containerThree">Contact</a>
               </div>
           </div> 
       </div>
